MET-5678 Fill missing comments Split too long lanes Rename some functions Reorganize some files